# lib-conclave-sdk

./: .env.example  .gitignore  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  Cargo.toml  GOVERNANCE.md  LICENSE  README.md  RELEASING.md  REPO_OWNERSHIP.md  SECURITY.md  SUPPORT.md  audit.toml  deny.toml  notes.md  pre_commit_review.json
.github/: CODE_REVIEW_REQUEST.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bounty_claim.md  bug_report.md  feature_request.md
.github/scripts/: verify-release-metadata.sh
.github/workflows/: ci.yml  codeql.yml  dependency-review.yml  hygiene.yml  release.yml  security.yml
contracts/: concentrated-liquidity-pool.clar  cxn-ubuntu-credit.clar
contracts/core/: admin-facade.clar  emergency-control.clar  risk-manager.clar
contracts/lending/: lending-manager.clar
contracts/oracle/: dimensional-oracle.clar  oracle-aggregator.clar
docs/: BRANCH_POLICY.md  CON-610_GATEWAY_AUDIT.md  CON-625_MAINNET_AUDIT.md  CON-627_AUDIT_FINDINGS.md  DEPLOYMENT_VERIFICATION_MATRIX.md  ETHOS.md  INTEGRATED_SYSTEM_TESTNET_GATE.md  REMEDIATION.md  REPO_CLASSIFICATION.md  SAB_MIGRATION_READINESS_GATES.md  SDK_BOUNDARY_CONTRACT.md  SDK_PRIMITIVES.md  SYSTEM_ALIGNMENT.md  TRUST.md
docs/architecture/: THREE_LANE_RUNTIME_DEPLOYMENT_ARCHITECTURE.md
docs/protocols/: ENTERPRISE_CUSTODY_BASELINE.md
openspec/changes/2026-04-18-con-439-fail-closed-bos-payments-apar/: tasks.md
openspec/changes/sdk-core-architecture/: design.md  proposal.md  tasks.md
openspec/changes/sdk-core-architecture/specs/asset-registry/: spec.md
openspec/changes/sdk-core-architecture/specs/business-management/: spec.md
openspec/changes/sdk-core-architecture/specs/modular-architecture/: spec.md
openspec/changes/sdk-core-architecture/specs/sovereign-handshake/: spec.md
src/: lib.rs  telemetry.rs  wasm_bindings.rs
src/enclave/: android_strongbox.rs  attestation.rs  cloud.rs  mod.rs
src/protocol/: a2p.rs  affiliate.rs  asset.rs  asset_tests.rs  bitcoin.rs  bitcoin_tests.rs  business.rs  dlc.rs  fiat.rs  identity.rs  job_card.rs  mmr.rs  mod.rs  musig2.rs  rails.rs  settlement.rs  settlement_service.rs  sidl.rs  stacks.rs  zkml.rs
src/protocol/rails/: bisq.rs  boltz.rs  changelly.rs  mod.rs  ntt.rs  wormhole.rs
src/state/: mod.rs
