[package]
name = "lib-conclave-sdk"
version = "0.1.0"
edition = "2024"

[dependencies]
aes = "0.8.4"
aes-gcm = "0.10.3"
bdk = "0.30.2"
bitcoin = "0.32.8"
getrandom = { version = "0.2", features = ["js"] }
hex = "0.4.3"
hmac = "0.12.1"
js-sys = "0.3.91"
k256 = "0.13.4"
musig2 = "0.3.1"
pbkdf2 = "0.12.2"
rand = "0.10.0"
rand_core = "0.10.0"
secp256k1 = { version = "0.31.1", features = ["recovery"] }
serde = { version = "1.0.228", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
serde_json = "1.0.149"
sha2 = "0.10.9"
subtle = "2.6.1"
thiserror = "2.0.18"
wasm-bindgen = "0.2.114"
wasm-bindgen-futures = "0.4.64"
web-sys = "0.3.91"

[dev-dependencies]
tokio = { version = "1.49.0", features = ["full"] }
