[package]
name = "lib-conclave-sdk"
version = "0.2.0"
edition = "2024"

[features]
default = []
mock-cloud-enclave = []

[dependencies]
zeroize = { version = "1.8.1", features = ["derive", "zeroize_derive"] }
async-trait = "0.1.86"
aes = "0.8.4"
aes-gcm = "0.10.3"
bdk_wallet = { version = "3.0.0", default-features = false, features = ["std"] }
bitcoin = { version = "0.33.0-beta", features = ["std", "rand"] }
getrandom = { version = "0.4.2", features = ["wasm_js"] }
hex = "0.4.3"
hmac = "0.13.0"
js-sys = "0.3.98"
k256 = "0.14.0-rc.9"
musig2 = "0.3.1"
pbkdf2 = "0.13.0"
quick-xml = "0.39.4"
rand = "0.10.0"
rand_core = "0.10.0"
reqwest = { version = "0.13.3", default-features = false, features = ["json", "rustls"] }
secp256k1 = { version = "0.32.0-beta.2", features = ["recovery", "std", "rand"] }
serde = { version = "1.0.228", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
serde_json = "1.0.149"
sha2 = "0.11.0"
subtle = "2.6.1"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["rt", "macros"] }
wasm-bindgen = "0.2.121"
wasm-bindgen-futures = "0.4.71"
web-sys = "0.3.98"

[dev-dependencies]
tokio = { version = "1.52.3", features = ["full"] }

[lib]
crate-type = ["cdylib", "rlib"]
